# sih-central-2025

./: .gitignore  PIPELINE.md  PS.md  README.md  SUMMARY.md  conn.log.txt  main.py  network.md  plugin_manager.py  pyproject.toml  requirements.txt
Sigma_Rules/: desktop.ini
Sigma_Rules/Nginx/: nginx_advanced_xss.yml  nginx_api_abuse.yml  nginx_attack_detection_summary.md  nginx_auth_bypass.yml  nginx_automated_tools.yml.disabled  nginx_brute_force_login.yml  nginx_command_injection.yml  nginx_cors_misconfig.yml  nginx_credential_stuffing.yml  nginx_csrf.yml  nginx_ddos_scanning.yml  nginx_directory_traversal.yml  nginx_file_exfiltration.yml  nginx_host_header_attack.yml  nginx_http_response_splitting.yml  nginx_http_smuggling.yml.disabled  nginx_jwt_manipulation.yml.disabled  nginx_lfi.yml  nginx_open_redirect.yml  nginx_path_probing.yml  nginx_rfi.yml  nginx_sensitive_data_exposure.yml  nginx_session_fixation.yml.disabled  nginx_sql_injection.yml  nginx_ssrf.yml  nginx_user_agent_spoofing.yml  nginx_web_shell_upload.yml  nginx_xss.yml  (+2 more)
collection_scripts/: syslog_setup.sh  windows_setup.ps1
logs/: pipeline.py
scripts/: anamaly_detect.py  app.py  check_alerts.py  check_db.py  debug_nginx.py  final_listner.py  import_zeek_conn.py  inspect_database.py  inspect_db.py  send_malicious_logs.py  test_db_repos.py  test_db_schema.py  test_ingestion_worker.py  test_sigma_engine.py  test_sigma_pipeline.py  verify_db_schema.py  windows_sender.ps1
src/: upload_logfile.py
tests/: test_parser.py  test_pipeline.py  test_queries.py  test_send_logs.py  test_sigma_worker.py
(+187 files in other folders)
