[project]
name = "sih-take4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.123.9",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "polars>=1.35.2",
    "pydantic>=2.12.5",
    "pysnmp-lextudio>=6.3.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "scapy>=2.6.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
    "zmq>=0.0.0",
]
